# tutorial_on_musa

./: .gitignore  .gitmodules  LICENSE  README.md
FAQ/: environment_FAQ.md  torch_musa_FAQ.md
docker/: Dockerfile  README.md  keep_alive.sh
docs/: README.md  how_to_do.md  kernel_install.md  kernel_update.md
licenses/: LICENSE.CUDA-Programming,txt
llama.cpp/: README.md
llm_tutorial/: deepspeed_qwen2.5_7b_train_tutorial.md  flagscale_llama2_7b_train_tutorial.md  llm_train_tutorial.md
monitor/: README.md
musa_quick_start/: README.md
musa_quick_start/0_example_mul/: README.md  main.mu
musa_quick_start/1_example_mul/: README.md  main.cpp
musa_quick_start/2_example_cmakelist/: CMakeLists.txt  README.md  main1.cpp  main2.cpp
musa_quick_start/2_example_cmakelist/device/: CMakeLists.txt  device_module1.mu  device_module2.cpp
musa_quick_start/2_example_cmakelist/device/include/: kernel.muh
musa_quick_start/2_example_cmakelist/include/: device_module1.h  device_module2.h
musa_quick_start/3_example_fft/: CMakeLists.txt  README.md  main.cpp
musa_quick_start/4_reduce_demo/: README.md  reduce_global_mem.mu  reduce_shared_memory.mu
musify/: README.md
musify_quick_start/example/musify_matrix_transpose/: CMakeLists.txt  musify_scripts.sh
musify_quick_start/example/musify_matrix_transpose/src/: error.cuh
pytorch/: README.md
pytorch/QuickStart/: EnableTensorCore.py  inference_demo.py  simple_demo.py  test_flashattention.py  train_AMP.py  train_DDP.py  train_cifar10.py
pytorch/cpp/: LICENSE  README.md  example-app.cpp  load_model.py
pytorch/pytorch_geometric/: README.md  test_train_GNN_demo.py
script/monitor/: README.md  monitor_gpu.sh
script/offline_test/: offline_container_test_pipeline_v1.0.sh
setup_musa/: README.md
setup_musa/check/: README.md  check_mtlink.sh  ib_stream_test.sh  musa_report.sh  pcie_version.sh  test_musa.mu  test_musa.sh
setup_musa/env_setup/: enable_iommu.sh  mt-container-toolkit_install.sh
vllm/: README.md  convert_weight.sh  generate_chat.py  stream_chat.py
vllm/benchmarks/: benchmark.md  benchmark_serving.py
vllm/check_vllm_image/: vllm_check.sh
vllm/demo/: model_config.json  model_url.json  run_server_ds_r1_dstl_qw1.5b.sh  run_vllm_serving.sh  supported_models.json
vllm_musa/: run.sh  start_vllm_server.sh
vllm_musa/demo/: offline_inference_musa.py  (+1 more)
(+116 files in other folders)
